--- a/src/app/features/search-result/components/products-list/products-list.component.html
+++ b/src/app/features/search-result/components/products-list/products-list.component.html
@@ -8,5 +8,5 @@
 </div>
 
 <div class="is-centered has-margin-t-4">
-  <button *ngIf="!finished" class="button is-primary" (click)="getProducts()">Ver más</button>
+  <button *ngIf="!finished" class="button is-outlined button-ngx is-primary" (click)="getProducts()">Ver más</button>
 </div>
